Fix footer text to be left aligned.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,6 +53,7 @@ h3 {
 #footer {
   background-color: dimgray;
   color: white;
+  text-align: left;
 }
 
 #footer a {
